{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 170,
  "lineage": "5e0a07e0-1169-0008-4470-456cf43f73e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "connected_car_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e0b205aea4a2a9f",
            "arn": "arn:aws:ec2:eu-central-1:136770600242:elastic-ip/eipalloc-07e0b205aea4a2a9f",
            "association_id": "eipassoc-059403a3aec6f7d33",
            "domain": "vpc",
            "id": "eipalloc-07e0b205aea4a2a9f",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-07b2041b31e725616",
            "private_dns": "ip-10-0-12-8.eu-central-1.compute.internal",
            "private_ip": "10.0.12.8",
            "public_dns": "ec2-3-69-193-186.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.69.193.186",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-nat-eip",
              "Project": "connected-car"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-nat-eip",
              "Project": "connected-car"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "connected_car_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:136770600242:internet-gateway/igw-0344e80cd6fb04b99",
            "id": "igw-0344e80cd6fb04b99",
            "owner_id": "136770600242",
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-igw",
              "Project": "connected-car"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-igw",
              "Project": "connected-car"
            },
            "vpc_id": "vpc-0f74c1aa442674ace"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:136770600242:loadbalancer/app/connected-car-alb/e201d57f59ab4a0f",
            "arn_suffix": "app/connected-car-alb/e201d57f59ab4a0f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "connected-car-alb-1301920071.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:136770600242:loadbalancer/app/connected-car-alb/e201d57f59ab4a0f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "connected-car-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f8bc30bc3b0ecf53"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-014a53c97826eaf9c"
              },
              {
                "subnet_id": "subnet-05f39788a6173be92"
              }
            ],
            "subnets": [
              "subnet-014a53c97826eaf9c",
              "subnet-05f39788a6173be92"
            ],
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-alb",
              "Project": "var.project_name"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-alb",
              "Project": "var.project_name"
            },
            "vpc_id": "vpc-0f74c1aa442674ace",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.connected_car_public_subnet",
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:136770600242:listener/app/connected-car-alb/e201d57f59ab4a0f/2881852c642485bf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:136770600242:targetgroup/connected-car-ingest-api-tg/19940d98d68234ff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:136770600242:listener/app/connected-car-alb/e201d57f59ab4a0f/2881852c642485bf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:136770600242:loadbalancer/app/connected-car-alb/e201d57f59ab4a0f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.application_load_balancer",
            "aws_lb_target_group.ingest_api_target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.connected_car_public_subnet",
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ingest_api_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:136770600242:targetgroup/connected-car-ingest-api-tg/19940d98d68234ff",
            "arn_suffix": "targetgroup/connected-car-ingest-api-tg/19940d98d68234ff",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:136770600242:targetgroup/connected-car-ingest-api-tg/19940d98d68234ff",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:136770600242:loadbalancer/app/connected-car-alb/e201d57f59ab4a0f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "connected-car-ingest-api-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-ingest-api-tg",
              "Project": "var.project_name"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-ingest-api-tg",
              "Project": "var.project_name"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f74c1aa442674ace"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "connected_car_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e0b205aea4a2a9f",
            "association_id": "eipassoc-059403a3aec6f7d33",
            "connectivity_type": "public",
            "id": "nat-0acfab2d3c8a68335",
            "network_interface_id": "eni-07b2041b31e725616",
            "private_ip": "10.0.12.8",
            "public_ip": "3.69.193.186",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05f39788a6173be92",
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-nat-gw",
              "Project": "connected-car"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-nat-gw",
              "Project": "connected-car"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.connected_car_nat_eip",
            "aws_internet_gateway.connected_car_igw",
            "aws_subnet.connected_car_public_subnet",
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "connected_car_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:136770600242:route-table/rtb-0568bb0bff3221837",
            "id": "rtb-0568bb0bff3221837",
            "owner_id": "136770600242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0acfab2d3c8a68335",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-private-rt",
              "Project": "connected-car"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-private-rt",
              "Project": "connected-car"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74c1aa442674ace"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.connected_car_nat_eip",
            "aws_internet_gateway.connected_car_igw",
            "aws_nat_gateway.connected_car_nat_gw",
            "aws_subnet.connected_car_public_subnet",
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "connected_car_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:136770600242:route-table/rtb-05d96ba835b9cf468",
            "id": "rtb-05d96ba835b9cf468",
            "owner_id": "136770600242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0344e80cd6fb04b99",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-public-rt",
              "Project": "connected-car"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-public-rt",
              "Project": "connected-car"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74c1aa442674ace"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.connected_car_igw",
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "connected_car_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb7ced3417669170",
            "route_table_id": "rtb-0568bb0bff3221837",
            "subnet_id": "subnet-076ae97e7d57a0248"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.connected_car_nat_eip",
            "aws_internet_gateway.connected_car_igw",
            "aws_nat_gateway.connected_car_nat_gw",
            "aws_route_table.connected_car_private_rt",
            "aws_subnet.connected_car_private_subnet",
            "aws_subnet.connected_car_public_subnet",
            "aws_vpc.connected_car_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b568dd73dffd479",
            "route_table_id": "rtb-0568bb0bff3221837",
            "subnet_id": "subnet-0d0e516d7db3cb556"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.connected_car_nat_eip",
            "aws_internet_gateway.connected_car_igw",
            "aws_nat_gateway.connected_car_nat_gw",
            "aws_route_table.connected_car_private_rt",
            "aws_subnet.connected_car_private_subnet",
            "aws_subnet.connected_car_public_subnet",
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "connected_car_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003482e2e8f23a4de",
            "route_table_id": "rtb-05d96ba835b9cf468",
            "subnet_id": "subnet-05f39788a6173be92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.connected_car_igw",
            "aws_route_table.connected_car_public_rt",
            "aws_subnet.connected_car_public_subnet",
            "aws_vpc.connected_car_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095acdbe03faa14c7",
            "route_table_id": "rtb-05d96ba835b9cf468",
            "subnet_id": "subnet-014a53c97826eaf9c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.connected_car_igw",
            "aws_route_table.connected_car_public_rt",
            "aws_subnet.connected_car_public_subnet",
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:136770600242:security-group/sg-0f8bc30bc3b0ecf53",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8bc30bc3b0ecf53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "connected-car-alb-sg",
            "name_prefix": "",
            "owner_id": "136770600242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-alb-sg",
              "Project": "var.project_name"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-alb-sg",
              "Project": "var.project_name"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74c1aa442674ace"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:136770600242:security-group/sg-0866cc45b0efaf6c6",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0866cc45b0efaf6c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f8bc30bc3b0ecf53"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "connected-car-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "136770600242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-ecs-service-sg",
              "Project": "var.project_name"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-ecs-service-sg",
              "Project": "var.project_name"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74c1aa442674ace"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "connected_car_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:136770600242:subnet/subnet-076ae97e7d57a0248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076ae97e7d57a0248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136770600242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-private-subnet-1",
              "Project": "connected-car",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-private-subnet-1",
              "Project": "connected-car",
              "Tier": "private"
            },
            "vpc_id": "vpc-0f74c1aa442674ace"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connected_car_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:136770600242:subnet/subnet-0d0e516d7db3cb556",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0e516d7db3cb556",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136770600242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-private-subnet-2",
              "Project": "connected-car",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-private-subnet-2",
              "Project": "connected-car",
              "Tier": "private"
            },
            "vpc_id": "vpc-0f74c1aa442674ace"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "connected_car_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:136770600242:subnet/subnet-05f39788a6173be92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f39788a6173be92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136770600242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-public-subnet-1",
              "Project": "connected-car",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-public-subnet-1",
              "Project": "connected-car",
              "Tier": "public"
            },
            "vpc_id": "vpc-0f74c1aa442674ace"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connected_car_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:136770600242:subnet/subnet-014a53c97826eaf9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014a53c97826eaf9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136770600242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "connected-car-public-subnet-2",
              "Project": "connected-car",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "connected-car-public-subnet-2",
              "Project": "connected-car",
              "Tier": "public"
            },
            "vpc_id": "vpc-0f74c1aa442674ace"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connected_car_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "connected_car_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:136770600242:vpc/vpc-0f74c1aa442674ace",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cd1bfbaf02b9e2cb",
            "default_route_table_id": "rtb-025ddf11aecf95053",
            "default_security_group_id": "sg-0ae67a22ffc50ec5b",
            "dhcp_options_id": "dopt-0a64eac111b48013e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f74c1aa442674ace",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025ddf11aecf95053",
            "owner_id": "136770600242",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "connected-car-vpc",
              "Project": "connected-car"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "connected-car-vpc",
              "Project": "connected-car"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}